# STM32-DeepSeek

./: CMakeLists.txt
docs/: getting_started.md
examples/azure_rtos_demo/: main.c
examples/blinky/: config.json
src/: main.cpp
src/ai/: anomaly_detector.cpp
src/analog/: signal_visualizer.cpp
src/analysis/: clang_integration.cpp
src/ci/: ci_integration.cpp  jenkins_integration.cpp
src/cloud/: cloud_storage.cpp  cloud_sync.cpp  iot_platforms.cpp  ota_updater.cpp
src/core/: advanced_logger.cpp  event_logger.cpp  hotkey_manager.cpp  log_system.cpp  main_window.cpp  main_window.h  plugin_loader.cpp  plugin_loader.h  plugin_system.cpp  project_finalizer.cpp  settings_profile.cpp  theme_manager.cpp
src/debugger/: breakpoint_manager.cpp  debug_engine.cpp  debug_engine.h  execution_tracer.cpp  interrupt_analyzer.cpp  interrupt_dependency.cpp  interrupt_visualizer.cpp  memory_analyzer.cpp  memory_leak_detector.cpp  memory_view.cpp  memory_visualizer.cpp  multicore_debugger.cpp  register_view.cpp  remote_debugger.cpp  rtos_awareness.cpp  stack_widget.cpp  usb_debug_interface.cpp
src/device/: bitfield_editor.cpp  clock_manager.cpp  crypto_accelerator.cpp  device_manager.cpp  hardware_debug.cpp  hw_spec_loader.cpp  interrupt_flow.cpp  interrupt_manager.cpp  peripheral_configurator.cpp  peripheral_manager.cpp  peripheral_view.cpp  peripheral_view.h  power_analyzer.cpp  power_manager.cpp  protocol_analyzer.cpp  svd_cache.cpp  vector_table_editor.cpp
src/drivers/: spi_driver.cpp  touch_driver.cpp
src/editor/: ai_autocomplete.cpp  code_editor.cpp  macro_system.cpp
(+48 files in other folders)
